# odometer-app

./: .gitignore  LICENSE  README.md  app.py  constants.py  example.env  pyproject.toml
database/: database.py  user.py
logbook/: logbook.py
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html  logbook.html  login.html  signup.html
